@startuml
entity Users {
  +user_id : int (PK)
  --
  email : string
  password_hash : string
  status : string
  created_at : datetime
}

entity Workshop {
  +workshop_id : int (PK)
  --
  name : string
  created_at : datetime
  leader_user_id : int (FK)

}


entity User_Workshop {
  +user_id : int (PK, FK)
  +workshop_id : int (PK, FK)
}

Users }o--o{ User_Workshop
Workshop }o--o{ User_Workshop


top to bottom direction

entity Class {
  +class_id : int (PK)
  --
  name : string
  date : date
  created_at : datetime
  workshop_id : int (FK)
}

Workshop ||--o{ Class

entity Role {
  +role_id : int (PK)
  --
  name : string
}

entity Permission {
  +permission_id : int (PK)
  --
  name : string
}

entity Role_Permission {
  +role_id : int (PK, FK)
  +permission_id : int (PK, FK)
}

entity User_Role {
  +user_id : int (PK, FK)
  +role_id : int (PK, FK)
}


Role }o--o{ Role_Permission
Permission }o--o{ Role_Permission
Users }o--o{ User_Role
Role }o--o{ User_Role


entity Profile {
  +user_id : int (PK, FK)
  --
  first_name : string
  last_name : string
  date_birth : date
  address : string
  level_id : int (FK)
  specialization_id : int (FK)
}

entity Level {
  +level_id : int (PK)
  --
  name : string
  created_at : datetime
  degree_level_id : int (FK)
}

entity Specialization {
  +specialization_id : int (PK)
  --
  name : string
}

entity Degree_Level {
  +degree_level_id : int (PK)
  --
  name : string
}

entity Level_Specialization {
  +level_id : int (PK, FK)
  +specialization_id : int (PK, FK)
}

entity User_Class {
  +user_class_id : int (PK)
  --
  user_id : int (FK)
  class_id : int (FK)
}

entity Properties {
  +class_id : int (PK, FK)
  --
  room_number : string
  capacity : int
  equipment : string
}


entity Login_History {
  +login_history_id : int (PK)
  --
  user_id : int (FK)
  login_at : datetime
  logout_at : datetime
  ip_address : string
  user_agent : string
}

entity Refresh_Tokens {
  +refresh_token_id : int (PK)
  --
  user_id : int (FK)
  token : string
  expires_at : datetime
  created_at : datetime
  revoked : boolean
}

Users ||--o{ Refresh_Tokens

Users ||--o{ Login_History
Class ||--|| Properties

Users }o--o{ User_Class
Class }o--o{ User_Class
Level }o--o{ Level_Specialization
Specialization }o--o{ Level_Specialization
Degree_Level ||--o{ Level
Users ||--|| Profile
Level ||--o{ Profile
Specialization ||--o{ Profile


@enduml
